<resources>
    <string name="app_name">Wallonia Fixed</string>

    <string name="welcome_title">Bienvenue !</string>
    <string name="welcome_description">Cette application a été construite dans le cadre du cours Développement mobile donné à la haute école de Namur Liège Luxembourg.</string>
    <string name="welcome_button">Continuer</string>

    <string name="login_connexion">Connexion</string>
    <string name="login_without_connexion">Sans compte</string>
    <string name="login_email">Email</string>
    <string name="login_edit_email">Votre adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="edit_password">Votre mot de passe</string>
    <string name="login_button">Se connecter</string>
    <string name="login_password_forgotten">Mot de passe oublié ?</string>
    <string name="login_create_account_button">Se créer un compte</string>

    <string name="create_account">Création d\'un compte</string>

    <string name="fragment_home">Accueil</string>
    <string name="fragment_add_report">Ajouter</string>
    <string name="fragment_profile">Profile</string>

    <string name="profile_first_name">Prénom</string>
    <string name="profile_last_name">Nom</string>
    <string name="profile_email">Adresse email</string>
    <string name="street">Rue</string>
    <string name="house_number">Numéro</string>
    <string name="zip_code">Code postal</string>
    <string name="city">Ville</string>
    <string name="profile_birthdate">Date de naissance</string>

    <string name="profile_disconnection_button">Se déconnecter</string>

    <!--FORMS MESSAGES-->
    <string name="exception_password">Les mots de passe ne sont pas identiques</string>
    <string name="exception_birthdate">La date de naissance ne peut être dans le futur</string>
    <string name="exception_zip_code">Le code postal doit être compris entre 1000 et 9999</string>
    <string name="exception_email">Ceci n\'est pas une adresse mail</string>
    <string name="number_only">Veuillez entrer des chiffres uniquement</string>
    <string name="wrong_datas">Veuillez entrer des valeurs correctes</string>
    <string name="email_already_used">Cette adresse mail est déjà utilisée</string>
    <string name="asking_connection_report">Vous devez vous connecter afin de pouvoir créer un signalement</string>
    <string name="asking_connection_event">Vous devez vous connecter afin de pouvoir créer un évènement</string>

    <string name="create_report">Ajouter un signalement</string>
    <string name="description">Description</string>
    <string name="report_type">Type du signalement</string>
    <string name="create_report_button">Créer un signalement</string>
    <string name="profile_personal_reports_button">Mes signalements</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_event_button">Créer un évènement</string>
    <string name="date">Date</string>
    <string name="hour">Heure</string>
    <string name="duration">Durée</string>
    <string name="information">Information</string>

    <!--ERRORS-->
    <string name="http_no_connection">Pas de connexion</string>
    <string name="error_request">Erreur requête</string>
    <string name="error_technical">Une erreur s\'est produite de notre côté</string>
    <string name="error_servor">Une erreur s\'est produite de notre côté</string>
    <string name="error_unknown">Une erreur inconnue s\'est produite. Se déconnecter et se reconnecter pourrait résoudre cette erreur.</string>

    <string name="profile_personnal_reports">Signalements personnels</string>
    <string name="report_created">Le signalement a bien été créé</string>

    <!--STATES-->
    <string name="state_pending">En attente</string>
    <string name="state_inProgress">En cours de traitement</string>
    <string name="state_solved">Résolu</string>
    <string name="state_cantBeSolved">Non résolvable</string>

    <string name="user_created">Le compte a bien été créé</string>
    <string name="create_event">Créer l\'évènement</string>
    <string name="cancel">Annuler</string>
    <string name="event_creation">Création d\'un évènement</string>
    <string name="understand">Compris</string>
    <string name="success">Succès</string>
    <string name="error">Erreur</string>
    <string name="error_first_name">Le prénom est obligatoire</string>
    <string name="error_last_name">Le nom est obligatoire</string>
    <string name="error_email">Email obligatoire ou incorrecte</string>
    <string name="error_password">Mot de passe invalide</string>
    <string name="error_birthdate">La date de naissance est obligatoire et doit être avant aujourd\'hui</string>
    <string name="error_street">Le nom de la rue est obligatoire</string>
    <string name="error_house_number">Le numéro de maison est obligatoire et doit contenir que des chiffres</string>
    <string name="error_zip_code">Le numéro postal est obligatoire et doit être compris entre 1000 et 9999</string>
    <string name="error_city">Le nom de la ville est obligatoire</string>
    <string name="error_future_date">Veuillez introduire une date dans le futur</string>
    <string name="error_hour">L\'heure doit être indiquée</string>
    <string name="error_duration">La durée doit être indiquée</string>
    <string name="error_description">Une description doit être indiquée</string>
    <string name="event_created">L\'évènement a bien été créé</string>
    <string name="error_id">Erreur dans un identifiant</string>
    <string name="token">token</string>
    <string name="wrong_email_password">Adresse mail ou/et mot de passe incorrect(s)</string>
    <string name="report_research">Rechercher un emplacement</string>
    <string name="profile">Profil</string>
    <string name="profile_own_reports">Mes reports</string>
    <string name="modify">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="delete_report">Êtes-vous certains de vouloir supprimer ce signalement ?   Il sera définitivement supprimé.</string>
    <string name="im_certain">Je suis sûr</string>
    <string name="report_deleted">Le signalement a bien été supprimé.</string>
    <string name="minutes">minutes</string>
    <string name="delete_participation">Se désinscrire</string>
    <string name="create_participation">Participer</string>
    <string name="participation">Participation</string>
    <string name="participate">Participe</string>
    <string name="dont_participate">Pas intéressé(e)</string>
    <string name="settings">Paramètres</string>
    <string name="language">Langue</string>
    <string name="close">Fermer</string>
    <string name="berg_thibaut" translatable="false">Thibaut BERG</string>
    <string name="bernard_nicolas" translatable="false">Nicolas BERNARD</string>
    <string name="report_modify" >Modifier le signalement</string>
    <string name="report_modified" >Signalement modifié</string>
    <string name="delete_event">Êtes-vous certains de vouloir supprimer cet évènement ?   Il sera définitivement supprimé.</string>
    <string name="event_deleted" >L\'évènement a bien été supprimé.</string>
    <string name="event_modify">Modifier l\'évènement</string>
    <string name="modify_account" >Modifier le compte</string>
    <string name="modify_account_question" >Êtes-vous certains de vouloir modifier ce compte ? Vous devrez vous reconnecter par la suite.</string>
    <string name="user_modified" >Le compte a bien été modifié</string>
</resources>