<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.welcome.WelcomeActivity">

    <LinearLayout
        android:id="@+id/welcome_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/welcome_description"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_description"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/waiting_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="30dp"
            app:srcCompat="@drawable/ic_baseline_cleaning_services_24" />

        <Button
            android:id="@+id/welcome_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/welcome_button"
            android:textColor="@color/colorSecond" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>